--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -96,7 +96,8 @@
    "cell_type": "code",
    "execution_count": 188,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
