--- a/Midterm_Project.ipynb
+++ b/Midterm_Project.ipynb
@@ -2,25 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33.0889711853\n",
+      "Male\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "import random as rnd\n",
+    "\n",
+    "\n",
+    "def gender():\n",
+    "    if rnd.randint(0,2) == 0:\n",
+    "        return 'Male'\n",
+    "    else:\n",
+    "        return 'Female'\n",
+    "\n",
+    "\n",
     "class Dolphins:\n",
-    "    def __init__(self, name, sex, age, mother, father, death):\n",
+    "    def __init__(self, name, mother, father, sex = gender()):\n",
     "        self.name = name\n",
     "        self.sex = sex\n",
-    "        self.age = age\n",
+    "        self.age = 0\n",
     "        self.mother = mother\n",
     "        self.father = father\n",
-    "        self.death = death\n",
+    "        self.death = rnd.gauss(mu = 35, sigma = 5)\n",
+    "        self.active = 0\n",
     "    def aging(self):\n",
     "        self.age +=1\n",
-    "    def eligible(self):\n",
-    "        if self.age >= 8 and\n",
-    "        "
+    "    def got_laid(self):\n",
+    "        if self.active == 0:\n",
+    "            self.active = 1\n",
+    "        else:\n",
+    "            self.active = 0\n",
+    "    def eligibiliy(self, partner):\n",
+    "        if (self.age >= 8 and self.active == 0\\\n",
+    "        and partner.age >=8 and partner.active == 0\\\n",
+    "        and abs(self.age-partner.age) < 10\\\n",
+    "        and (self.mother != partner.mother or self.father != partner.father)):\n",
+    "            return True\n",
+    "        \n",
+    "        \n",
+    "living_dolphins = []\n",
+    "dead_dolphins = []\n",
+    "\n",
+    "        \n",
+    "for i in ['Ted', 'Bobby']:\n",
+    "    living_dolphins.append(Dolphins(i,0,0,'Male'))\n",
+    "for i in ['Terry', 'Alisha']:\n",
+    "    living_dolphins.append(Dolphins(i,0,0,'Female'))\n",
+    "        \n",
+    "        \n",
+    "print rnd.gauss(mu = 35, sigma = 5)\n",
+    "print gender()"
    ]
   }
  ],
