--- a/Midterm_Project.ipynb
+++ b/Midterm_Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -11,8 +11,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33.0889711853\n",
-      "Male\n"
+      "35.6662815648\n",
+      "Female\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "7\n",
+      "7\n",
+      "7\n",
+      "7\n",
+      "8\n",
+      "8\n",
+      "8\n",
+      "8\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "10\n",
+      "10\n",
+      "10\n",
+      "10\n"
      ]
     }
    ],
@@ -60,10 +100,20 @@
     "    living_dolphins.append(Dolphins(i,0,0,'Male'))\n",
     "for i in ['Terry', 'Alisha']:\n",
     "    living_dolphins.append(Dolphins(i,0,0,'Female'))\n",
+    "    \n",
+    "    \n",
+    "def advance_year():\n",
+    "    for i in living_dolphins:\n",
+    "        i.aging()\n",
     "        \n",
     "        \n",
     "print rnd.gauss(mu = 35, sigma = 5)\n",
-    "print gender()"
+    "print gender()\n",
+    "\n",
+    "for i in range(0,10):\n",
+    "    advance_year()\n",
+    "    for i in range(0,4):\n",
+    "        print living_dolphins[i].age"
    ]
   }
  ],
