--- a/Midterm_Project.ipynb
+++ b/Midterm_Project.ipynb
@@ -438,33 +438,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "expected string or buffer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-e10ac8c5f0fa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtxt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mguys_names1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mscale\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'(.*\">)(.*)(<)'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtxt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0mguys_names\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscale\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mguys_names\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Applications/Canopy.app/appdata/canopy-1.5.5.3123.macosx-x86_64/Canopy.app/Contents/lib/python2.7/re.pyc\u001b[0m in \u001b[0;36msearch\u001b[0;34m(pattern, string, flags)\u001b[0m\n\u001b[1;32m    144\u001b[0m     \"\"\"Scan through string looking for a match to the pattern, returning\n\u001b[1;32m    145\u001b[0m     a match object, or None if no match was found.\"\"\"\n\u001b[0;32m--> 146\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_compile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    147\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    148\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrepl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected string or buffer"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "expected string or buffer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-e10ac8c5f0fa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtxt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mguys_names1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mscale\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'(.*\">)(.*)(<)'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtxt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0mguys_names\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscale\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mguys_names\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Applications/Canopy.app/appdata/canopy-1.5.5.3123.macosx-x86_64/Canopy.app/Contents/lib/python2.7/re.pyc\u001b[0m in \u001b[0;36msearch\u001b[0;34m(pattern, string, flags)\u001b[0m\n\u001b[1;32m    144\u001b[0m     \"\"\"Scan through string looking for a match to the pattern, returning\n\u001b[1;32m    145\u001b[0m     a match object, or None if no match was found.\"\"\"\n\u001b[0;32m--> 146\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_compile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    147\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    148\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrepl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected string or buffer"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"A'dab\", \"A'idah\", \"A'li\", \"A'mal\", 'Aabh', 'Aadab', 'Aafree', 'Aaish', 'Aakanksh', 'Aali', 'Aaliy', 'Aaliyah', 'Aalliyah', 'Aamaal', 'Aamand', 'Aamani', 'Aamber', 'Aaminah', 'Aamir', 'Aamirah', 'Aamiy', 'A', 'Aanisah', 'Aany', 'Aaradhy', 'Aari', 'Aari', 'Aari', 'Aariel', 'Aarielle', 'Aarushi', 'Aaryah', 'Aary', 'Aary', 'Aasi', 'Aasm', 'Aatikah', 'Aav', 'Aayl', 'Abbigale', 'Abeer', 'Abh', 'Abhati', 'Abhay', 'Abhidh', 'Abhidhy', 'Abhil', 'Abhilash', 'Abhinithi', 'Abhiprithi', 'Abhirathi', 'Abhiri', 'Abhisri', 'Abhithi', 'Abi', 'Abi', 'Abid', 'Abidah', 'Abigail', 'Abir', 'Abir', 'Abisht', 'Abl', 'Abl', 'Ablah', 'Aboil', 'Abr', 'Abri', 'Acaci', 'Accaci', 'Achal', 'Achazi', 'Ad', 'Adah', 'Adali', 'Adally', 'Adaly', 'Adaly', 'Adami', 'Adar', 'Add', 'Addaly', 'Addaly', 'Addeline', 'Addri', 'Addri', 'Addyso', 'Adeel', 'Adeel', 'Adel', 'Adelaide', 'Adele', 'Adelee', 'Adeli', 'Adeline', 'Adelle', 'Ade', 'Adere', 'Adhir', 'Adib', 'Adie', 'Adil', 'Adilah', 'Adilene', 'Adilenne', 'Adi', 'Adi', 'Adine', 'Adith', 'Aditi', 'Aditri', 'Adiv', 'Adr', 'Adri', 'Adriane', 'Adrianne', 'Adrie', 'Adriene', 'Adrij', 'Adrik', 'Adri', 'Ady', 'Adyso', 'Afaf', 'Afifah', 'Afr', 'Afr', 'Afrah', 'Afree', 'Afroz', 'Afto', 'Agate', 'Agath', 'Aghanashini', 'Agne', 'Agne', 'Agnishikh', 'Agrat', 'Agrim', 'Ahaly']\n",
+      "['Aab', 'Aabheer', 'Aadam', 'Aad', 'Aadarsh', 'Aadesh', 'Aadh', 'Aadhir', 'Aadi', 'Aadidev', 'Aadil', 'Aadinath', 'Aadir', 'Aadit', 'Aaditey', 'Aadity', 'Aadri', 'Aagam', 'Aagney', 'Aagney', 'Aah', 'Aahlaad', 'Aahv', 'Aaid', 'Aaide', 'Aaidy', 'Aakaar', 'Aakaash', 'Aakar', 'Aakarsh', 'Aal', 'Aalok', 'Aamil', 'Aamir', 'Aamod', 'Aanand', 'Aanandswaru', 'Aandaleeb', 'Aanjaney', 'Aapt', 'Aaraadhak', 'Aarav', 'Aarhant', 'Aaric', 'Aarif', 'Aarit', 'Aariz', 'Aarnav', 'Aaro', 'Aaro', 'Aarpit', 'Aarro', 'Aarsh', 'Aarth', 'Aarush', 'Aary', 'Aashank', 'Aashay', 'Aashish', 'Aashm', 'Aashutosh', 'Aasim', 'Aastik', 'Aatish', 'Aatmaj', 'Aatrey', 'Aay', 'Aayd', 'Aayu', 'Aayushm', 'Ab', 'Ab', 'Abasalom', 'Abb', 'Abb', 'Abbott', 'Abbud', 'Abbudi', 'Abdall', 'Abdallah', 'Abdalrahm', 'Abdel', 'Abdellah', 'Abdiel', 'Abdul', 'Abdul-Alim', 'Abdul-Aliyy', 'Abdul-Azeez', 'Abdul-Azim', 'Abdul-Aziz', 'Abdul-Baari', 'Abdul-Bari', 'Abdul-Basit', 'Abdul-Fattah', 'Abdul-Ghaffar', 'Abdul-Ghafoor', 'Abdul-Haafiz', 'Abdul-Hadi', 'Abdul-Hafiz', 'Abdul-Hakam', 'Abdul-Hakim', 'Abdul-Halim', 'Abdul-Hameed', 'Abdul-Hamid', 'Abdul-Haqq', 'Abdul-Haseeb', 'Abdul-Hasib', 'Abdul-Jabaar', 'Abdul-Jabbar', 'Abdul-Jaleel', 'Abdul-Jalil', 'Abdul-Karim', 'Abdul-Khaaliq', 'Abdul-Khaliq', 'Abdul-Latif', 'Abdul-Majid', 'Abdul-Malik', 'Abdul-Mati', \"Abdul-Mu'izz\", 'Abdul-Muhaimi', 'Abdul-Mujib', \"Abdul-Muta'al\", 'Abdul-Nasir', 'Abdul-Nasser', 'Abdul-Qaadir', 'Abdul-Qadir', 'Abdul-Qahaar', 'Abdul-Qahhar', 'Abdul-Quddu', 'Abdul-Qudoo', \"Abdul-Ra'uf\", 'Abdul-Rafi', 'Abdul-Raheem', 'Abdul-Rahim', 'Abdul-Rahm', 'Abdul-Raouf', 'Abdul-Rasheed', 'Abdul-Rashid', 'Abdul-Razaaq', 'Abdul-Razzaq']\n"
      ]
     }
    ],
@@ -472,23 +456,42 @@
     "# still method 2, but with a new module: urllib2\n",
     "import urllib2 \n",
     "import re\n",
-    "boy_names = ''\n",
-    "for i in range(1,5):\n",
-    "    url = 'http://www.prokerala.com/kids/baby-names/boy/page-{:g}.html'.format(i)\n",
-    "    infile = urllib2.urlopen(url) \n",
-    "    boy_names += infile.read()   #here I used .read() so there you can see it with webbrowser.open() below.\n",
-    "    infile.close() \n",
-    "    #print boy_names\n",
     "\n",
-    "\n",
-    "guys_names1 = re.findall('(.*nameDetails\">)(.*)(</)', boy_names)\n",
-    "#print guys_names1\n",
-    "guys_names = []\n",
-    "\n",
-    "for txt in guys_names1:\n",
-    "    scale = re.search('(.*\">)(.*)(<)', txt)\n",
-    "    guys_names.append(scale.group(2))\n",
-    "print guys_names\n",
+    "def find_names():\n",
+    "    boy_names = ''\n",
+    "    girl_names = ''\n",
+    "    for i in range(1,5):\n",
+    "        url = 'http://www.prokerala.com/kids/baby-names/boy/page-{:g}.html'.format(i)\n",
+    "        url1 = 'http://www.prokerala.com/kids/baby-names/girl/page-{:g}.html'.format(i)\n",
+    "        infile = urllib2.urlopen(url) \n",
+    "        boy_names += infile.read()   #here I used .read() so there you can see it with webbrowser.open() below.\n",
+    "        infile.close()\n",
+    "        infile = urllib2.urlopen(url1) \n",
+    "        girl_names += infile.read()   #here I used .read() so there you can see it with webbrowser.open() below.\n",
+    "        infile.close()\n",
+    "        \n",
+    "        #print boy_names\n",
+    "    guys_names1 = re.findall('(.*nameDetails\">)(.*)(</)', boy_names)\n",
+    "    guys_names = []\n",
+    "    gals_names1 = re.findall('(.*nameDetails\">)(.*)(</)', girl_names)\n",
+    "    gals_names = []\n",
+    "    for txt in guys_names1:\n",
+    "        text = txt[1]\n",
+    "        text2 = text.strip('</span>')\n",
+    "        guys_names.append(text2)\n",
+    "    for txt in gals_names1:\n",
+    "        text = txt[1]\n",
+    "        text2 = text.strip('</span>')\n",
+    "        gals_names.append(text2)\n",
+    "    dir_path = \"/Users/labuser/comp-phys/\"\n",
+    "    filenm1 = dir_path + \"tmp/tmp.html\"                \n",
+    "    with open(filenm,\"w\") as f:\n",
+    "    f.write() \n",
+    "    print gals_names\n",
+    "    print guys_names\n",
+    "    \n",
+    "    \n",
+    "find_names()\n",
     "\n",
     "#for txt in hi_lo_text:\n",
     "    #scale = re.findall(' [a-z] ', txt)[0].strip(' ')\n",
